--- a/roles/master/vars/main.yml
+++ b/roles/master/vars/main.yml
@@ -1,6 +1,5 @@
 #---------------------------------------------#
-# Author: Adam WezvaTechnologies
-# Call/Whatsapp: +91-9739110917
+# Author: Vijay
 #---------------------------------------------#
 
 ---
@@ -8,6 +7,5 @@ java: openjdk-17-jdk
 jenkins_repo: https://pkg.jenkins.io/debian-stable
 jenkins_version: 2.500
 #---------------------------------------------#
-# Author: Adam WezvaTechnologies
-# Call/Whatsapp: +91-9739110917
+# Author: Vijay
 #---------------------------------------------#
